added seo and fixed whatsapp link preview, finally. Changed articles page view. Added no crawling code to admin pages.

--- a/Pages/Admin/AdminLayout.razor
+++ b/Pages/Admin/AdminLayout.razor
@@ -1,6 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
 <PageTitle>Medbase Admin</PageTitle>
+<HeadContent>
+    <meta name="robots" content="noindex,nofollow">
+</HeadContent>
 
 <MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode" />
 <MudDialogProvider />
