--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -13,14 +13,9 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="MedbaseBlazor.styles.css" rel="stylesheet" />
 
-    
     <!--WhatsApp Metas-->
-    <meta property="og:site_name" content="Medbase | Medical School MCQs">
-    <meta property="og:title" content="Medbase - Medical School MCQs" />
-    <meta property="og:description" content="Create quizzes, ask AI and more in Medbase" />
-    <meta property="og:image" itemprop="image" content="~/img/medbase_logo.png">
-    <meta property="og:type" content="website" />
-    <meta property="og:updated_time" content="1440432930" />
+    <meta property="og:site_name" content="Medbase">
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +30,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
 
     <!-- Google Tag Manager -->
     <script>
@@ -60,7 +56,6 @@
     <!--Google Ads Line-->
     <script data-ad-client="ca-pub-7010150994074481" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
