--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -5,6 +5,27 @@
 @inject NavigationManager navManager;
 @inject IApiRepository repository
 
+<PageTitle>@title</PageTitle>
+<HeadContent>
+    <title>@title</title>
+    <meta name="title" content="@title" />
+    <meta name="description" content="@description" />
+
+    <!-- Open Graph / Facebook -->
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="@navManager.BaseUri" />
+    <meta name="og:title" content="@title" />
+    <meta name="og:description" content="@description" />
+    <meta name="og:image" content="@image" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="@navManager.BaseUri" />
+    <meta name="twitter:title" content="@title" />
+    <meta name="twitter:description" content="@description" />
+    <meta name="twitter:image" content="@image" />
+</HeadContent>
+
 <!-- Header-->
 <header class="py-5 background-state">
     <div class="px-4 pt-5 my-5 text-center border-bottom">
@@ -126,6 +147,10 @@
     private IEnumerable<Article> Articles { get; set; } = Enumerable.Empty<Article>();
 
     protected override Task OnInitializedAsync() => GetArticlesAsync();
+
+    private string description = "Medbase is a website and an app that helps medical students learn anatomy, physiology and pathology through true or false format MCQs and Notes. Medbase is a useful tool for medical students who want to test their knowledge and prepare for their exams";
+    private string title = "Home | Medbase";
+    private string image = "https://i.postimg.cc/T1DjN4S5/Logo.png";
 
     private async Task GetArticlesAsync() => Articles = await repository.GetArticlesNumbered(3);
 
