--- a/Pages/User/ChangeLog.razor
+++ b/Pages/User/ChangeLog.razor
@@ -2,71 +2,43 @@
 
 <PageTitle>Medbase | Change Log</PageTitle>
 
-<div class="container text-center">
-    <MudBreadcrumbs Items="_items"></MudBreadcrumbs>
-
-    <MudTimeline TimelineAlign="TimelineAlign.Start">
-        <MudTimelineItem Color="Color.Primary" Elevation="25">
-            <ItemOpposite>
-                <MudText Color="Color.Primary" Typo="Typo.h6">06 April 2023</MudText>
-            </ItemOpposite>
-            <ItemContent>
-                <MudPaper Elevation="0" Class="mt-n1">
-                    <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">Version 1.3</MudText>
-                    <MudText Typo="Typo.body2"><em>*New Feature*</em> Added Search function to the questions</MudText>
-                    <MudText Typo="Typo.body2"><em>*New Feature*</em> Bottom navigation page for questions page</MudText>
-                </MudPaper>
-            </ItemContent>
-        </MudTimelineItem>
-        <MudTimelineItem Color="Color.Primary" Elevation="25" TimelineAlign="TimelineAlign.End">
-            <ItemOpposite>
-                <MudText Color="Color.Primary" Typo="Typo.h6">11 March 2023</MudText>
-            </ItemOpposite>
-            <ItemContent>
-                <MudPaper Elevation="0" Class="mt-n1">
-                    <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">Version 1.3</MudText>
-                    <MudText Typo="Typo.body2">Fixed error with quizzes that showed the same questions every session</MudText>
-                    <MudText Typo="Typo.body2"><em>*New Feature*</em> Breadcrumbs for easier navigation on the website</MudText>
-                    <MudText Typo="Typo.body2"><em>*New Feature*</em> Dark mode for mobile application</MudText>
-                    <MudText Typo="Typo.body2">Added new courses => Immunology and Medical Microbiology (3rd Year)</MudText>
-                </MudPaper>
-            </ItemContent>
-        </MudTimelineItem>
-        <MudTimelineItem Color="Color.Primary" Elevation="25">
-            <ItemOpposite>
-                <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">2 March 2023</MudText>
-            </ItemOpposite>
-            <ItemContent>
-                <MudPaper Elevation="0" Class="mt-n1">
-                    <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">Version 1.1</MudText>
-                    <MudText Typo="Typo.body2">Changed database servers after break down of the website</MudText>
-                    <MudText Typo="Typo.body2">Medbase is now completely free with premium plans and offerings scrapped</MudText>
-                </MudPaper>
-            </ItemContent>
-        </MudTimelineItem>
-
-
-        <MudTimelineItem Color="Color.Primary" Elevation="25" TimelineAlign="TimelineAlign.End">
-            <ItemOpposite>
-                <MudText Color="Color.Primary" Typo="Typo.h6">14 February 2023</MudText>
-            </ItemOpposite>
-            <ItemContent>
-                <MudPaper Elevation="0" Class="mt-n1">
-                    <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">Version 1.0.3</MudText>
-                    <MudText Typo="Typo.body2">The first version is released and uploaded as v1.0.3.</MudText>
-                    <MudText Typo="Typo.body2">Bug fixes and improvements</MudText>
-                </MudPaper>
-            </ItemContent>
-        </MudTimelineItem>
-
-    </MudTimeline>
+<div class="container">
+	@MarkdownHtml
 </div>
 
 
 @code {
-    private List<BreadcrumbItem> _items = new List<BreadcrumbItem>
+    private MarkupString MarkdownHtml { get; set; }
+
+    protected async override Task OnInitializedAsync()
     {
-        new BreadcrumbItem("Home", href: "/home", icon: Icons.Material.Filled.Home),
-        new BreadcrumbItem("Changes", href: "/changelog", icon: Icons.Material.Filled.ChangeHistory)
-    };
+		string markdown = @"
+# Version 1.5 - 9 March 2024
+
+    ## New Features
+        - Added actions to send updates faster to the website
+	    - Bump up to 1.5 to match the mobile app version
+
+# Version 1.3 - 11 March 2023
+
+	## New Features
+		- Breadcrumbs for easier navigation
+		- Dark mode for better reading experience
+		- Added new courses for better learning experience
+
+	## Bug Fixes
+		- Fixed issue with quizzes showing same questions every session
+
+# Version 1.2 - 2 March 2023
+
+	## Bug Fixes
+		- Changed database servers for better performance and experience
+		- Medbase completely free
+
+# Version 1.0.3 - 14 February 2023
+
+	- First version of Medbase Blazor released as 1.0.3
+	- Bug fixes for better learning experience";
+        MarkdownHtml = new MarkupString(Markdig.Markdown.ToHtml(markdown));
+    }
 }
