added illustrations to headers and changed design a bit

--- a/Pages/User/Notes.razor
+++ b/Pages/User/Notes.razor
@@ -23,23 +23,19 @@
     <meta name="twitter:image" content="@image" />
 </HeadContent>
 
-<!-- Header-->
-<header class="py-5 medbase-font background-state">
-    <div class="container px-5">
-        <div class="row gx-5 align-items-center justify-content-center">
-            <div class="col-lg-8 col-xl-4 col-xxl-4">
-                <div class="my-5 text-center text-xl-start">
-                    <MudText Typo="Typo.h2" class="display-5 fw-bolder mb-2 text-light">
-                        Notes📝
-                    </MudText>
-                    <MudText class="text-light fw-normal mb-4">
-                        @description
-                    </MudText>
-                </div>
+<header>
+    <div class="container my-5">
+        <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+            <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                <MudText Typo="Typo.h2" class="display-5 fw-bolder mb-2">
+                    Notes📝
+                </MudText>
+                <MudText class="fw-normal mb-4">
+                    @description
+                </MudText>
             </div>
-            <div class="col-xl-8 col-xxl-8 text-center">
-                <img class="img-fluid rounded-3 my-5"
-                     src="img/notes.svg" alt="..." />
+            <div class="col-lg-4 offset-lg-1 m-5">
+                <img class="img-fluid bg-transparent" src="img/notes.png" style="max-height:300px">
             </div>
         </div>
     </div>
