--- a/Pages/Admin/Utilities/QuestionsDetails.razor
+++ b/Pages/Admin/Utilities/QuestionsDetails.razor
@@ -39,6 +39,8 @@
         <tr><th>ExplanationE</th><td>@question.ExplanationE</td></tr>
     </tbody>
 </table>
+
+<h4>@question.TopicRef</h4>
 @code {
     [Parameter]
     public int id { get; set; }
