--- a/Pages/User/Questions.razor
+++ b/Pages/User/Questions.razor
@@ -73,7 +73,7 @@
                     Label="Show Toolbar"
                     Class="object-left" />
         </div>
-        <div style="margin-bottom:150px;">
+        <div class="col-lg-6 col-md-8 mx-auto fw-normal" style="margin-bottom:150px;">
             <Virtualize Items="QuestionPaged.Questions.ToList()" Context="question" TItem="Question">
                 <ItemContent>
                     <MudCard class="mb-2">
