--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,9 +8,10 @@
 @using Microsoft.JSInterop
 @using MedbaseBlazor
 @using MedbaseBlazor.Shared
-@using MedbaseLibrary.Models
-@using MedbaseLibrary.Services
 @using MedbaseBlazor.Pages.Admin
 @using MedbaseBlazor.Pages.User
-@using MedbaseBlazor.Pages.Views
 @using MudBlazor
+@using MedbaseComponents
+@using MedbaseComponents.Models
+@using MedbaseComponents.Services
+@using MedbaseComponents.Controls
