--- a/App.razor
+++ b/App.razor
@@ -1,5 +1,8 @@
-﻿<CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(App).Assembly">
+﻿@using MedbaseComponents
+@using MedbaseComponents.Controls
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(App).Assembly"
+        AdditionalAssemblies="new[]{typeof(Component1).Assembly}">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
