--- a/Pages/Admin/Editors/QuestionsEditor.razor
+++ b/Pages/Admin/Editors/QuestionsEditor.razor
@@ -4,7 +4,7 @@
 @layout AdminLayout
 @inject IApiRepository repository
 @inject ISnackbar Snackbar
-@using MedbaseLibrary.Models
+@using MedbaseComponents.Models
 @using MedbaseBlazor.Pages.Admin.Utilities
 @using Markdig
 
