--- a/_Imports.razor
+++ b/_Imports.razor
@@ -15,3 +15,5 @@
 @using MedbaseComponents.Models
 @using MedbaseComponents.Services
 @using MedbaseComponents.Controls
+@using MedbaseComponents.Pages.User
+@using MedbaseComponents.Pages.Auth
