--- a/_Imports.razor
+++ b/_Imports.razor
@@ -16,4 +16,5 @@
 @using MedbaseComponents.Services
 @using MedbaseComponents.Controls
 @using MedbaseComponents.Pages.User
-@using MedbaseComponents.Pages.Auth
+@using PSC.Blazor.Components.MarkdownEditor
+@using PSC.Blazor.Components.MarkdownEditor.EventsArgs
